syntax = "proto3";

option java_package = "com.reachravi55.mydailyroutine.proto";
option java_multiple_files = true;

message RoutineStore {
  string active_list_id = 1;
  repeated RoutineList lists = 2;
  repeated Task tasks = 3;
  repeated OccurrenceOverride overrides = 4;
  Settings settings = 5;
}

message RoutineList {
  string id = 1;
  string name = 2;
  int32 sort_order = 3;
  bool archived = 4;
}

message Task {
  string id = 1;
  string list_id = 2;
  string title = 3;
  string description = 4;

  // ISO-8601 date, e.g. "2026-01-08"
  string start_date = 5;

  RepeatRule repeat_rule = 6;
  repeated Reminder reminders = 7;

  bool notes_enabled = 8;
  int32 sort_order = 9;
  bool archived = 10;

  repeated Subtask subtasks = 11;
}

message Subtask {
  string id = 1;
  string title = 2;
  int32 sort_order = 3;
  bool notes_enabled = 4;
}

message RepeatRule {
  enum Frequency {
    NONE = 0;
    DAILY = 1;
    WEEKLY = 2;
    MONTHLY = 3;
    YEARLY = 4;
  }
  Frequency frequency = 1;
  int32 interval = 2; // every N units (default 1)
  // weekly: 1=Mon..7=Sun
  repeated int32 by_weekday = 3;
  // monthly: day of month (1..31), 0 means use start_date's day
  int32 day_of_month = 4;
  // optional end date
  string until_date = 5;
}

message Reminder {
  int32 hour = 1;
  int32 minute = 2;
  bool enabled = 3;
  string label = 4;
}

message OccurrenceOverride {
  string task_id = 1;
  string date = 2; // yyyy-mm-dd
  bool completed = 3;
  string note = 4;

  repeated SubtaskOverride subtask_overrides = 5;

  // for future: skip/move
  bool skipped = 6;
}

message SubtaskOverride {
  string subtask_id = 1;
  bool completed = 2;
  string note = 3;
}

message Settings {
  bool notifications_enabled = 1;
}
